app/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

h3 {
  font-size: 5rem;
}

.menuItemContainer{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;

  align-items: center;
  margin-left: 10%;
  margin-right: 10%;
}

.paper {
  margin-left: 20%;
}

